#441 avoid duplicate loading of YAML configs